# apps/castaway-web/internal/httpapi/server.go
@@ -84,6 +84,10 @@ func (s *Server) Router() *gin.Engine {
 	protected.GET("/discord/guilds/:guildID/channels/:channelID", s.getDiscordChannelBinding)
 	protected.PUT("/discord/guilds/:guildID/channels/:channelID", s.setDiscordChannelBinding)
 	protected.DELETE("/discord/guilds/:guildID/channels/:channelID", s.deleteDiscordChannelBinding)
+	protected.POST("/instances/:instanceID/announcements", s.createAnnouncement)
+	protected.GET("/instances/:instanceID/announcements", s.listAnnouncements)
+	protected.POST("/announcements/claim", s.claimAnnouncement)
+	protected.POST("/announcements/:announcementID/finish", s.finishAnnouncement)
 	protected.POST("/instances", s.createInstance)
 	protected.POST("/instances/import", s.importInstance)
 	protected.GET("/instances/:instanceID", s.getInstance)
